Mut4All/bug-labels/rust/A-incr-comp/126487.txt
Issue Title:
Cargo check internal error (using UOM library) · Issue #126487 · rust-lang/rust · GitHub

Rust Code:
use std::ops::{Add, Sub};

/*
pub trait UOMQuantity<D, U, V>
where
    D: uom::si::Dimension + ?Sized,
    U: uom::si::Units<V> + ?Sized,
    V: uom::num_traits::Num + uom::Conversion<V>,
    <D as uom::si::Dimension>::Kind: uom::marker::Add,
    uom::si::Quantity<D, U, V>: Clone,
{
}
*/
pub struct Vector2D<T: Clone> {
    pub x: T,
    pub y: T,
}

impl<T: Clone> Vector2D<T> {
    pub fn new(x: T, y: T) -> Self {
        apoijasfpoiajsdfpoijpfoijsadf;
        Self { x, y }
    }
}

impl<T: Clone> Clone for Vector2D<T> {
    fn clone(&self) -> Self {
        Vector2D {
            x: self.x.clone(),
            y: self.y.clone(),
        }
    }
}

impl<T: Clone, RHS: Clone, _Output> Add<RHS> for Vector2D<T>
where
    T: Add<RHS>,
{
    type Output = <T as Add<RHS>>::Output;

    fn add(self, rhs: RHS) -> Self::Output {
        _Output {
            x: self.x.clone() + rhs.x.clone(),
            y: self.y.clone() + rhs.y.clone(),
        }
    }
}

fn main() {
    let v1 = Vector2D::new(1, 2);
    let v2 = Vector2D::new(3, 4);
}

Bug Trace:
Compiling linkphys v0.1.0 (/home/fuexfollets/Projects/Linkphys)
error[E0425]: cannot find value `apoijasfpoiajsdfpoijpfoijsadf` in this scope
  --> src/system_objects/vector2d.rs:21:9
   |
21 |         apoijasfpoiajsdfpoijpfoijsadf;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0574]: expected struct, variant or union type, found type parameter `_Output`
  --> src/system_objects/vector2d.rs:42:9
   |
35 | impl<T: Clone, RHS: Clone, _Output> Add<RHS> for Vector2D<T>
   |                            ------- found this type parameter
...
42 |         _Output {
   |         ^^^^^^^ not a struct, variant or union type

warning: unused import: `Sub`
 --> src/system_objects/vector2d.rs:1:21
  |
1 | use std::ops::{Add, Sub};
  |                     ^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0207]: the type parameter `_Output` is not constrained by the impl trait, self type, 
or predicates
  --> src/system_objects/vector2d.rs:35:28
   |
35 | impl<T: Clone, RHS: Clone, _Output> Add<RHS> for Vector2D<T>
   |                            ^^^^^^^ unconstrained type parameter

error[E0609]: no field `x` on type `RHS`
  --> src/system_objects/vector2d.rs:43:37
   |
35 | impl<T: Clone, RHS: Clone, _Output> Add<RHS> for Vector2D<T>
   |                --- type parameter 'RHS' declared here
...
43 |             x: self.x.clone() + rhs.x.clone(),
   |                                     ^ unknown field

error[E0308]: mismatched types
  --> src/system_objects/vector2d.rs:43:16
   |
35 | impl<T: Clone, RHS: Clone, _Output> Add<RHS> for Vector2D<T>
   |      -
   |      |
   |      expected this type parameter
   |      expected this type parameter
...
43 |             x: self.x.clone() + rhs.x.clone(),
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected type parameter `T`, found associ
ated type
   |
   = note: expected type parameter `T`
             found associated type `<T as Add<RHS>>::Output`
help: consider further restricting this bound
   |
37 |     T: Add<RHS, Output = T>,
   |               ++++++++++++
help: consider further restricting this bound
   |
37 |     T: Add<RHS, Output = T>,
   |               ++++++++++++

error[E0609]: no field `y` on type `RHS`
  --> src/system_objects/vector2d.rs:44:37
   |
35 | impl<T: Clone, RHS: Clone, _Output> Add<RHS> for Vector2D<T>
   |                --- type parameter 'RHS' declared here
...
44 |             y: self.y.clone() + rhs.y.clone(),
   |                                     ^ unknown field

error[E0308]: mismatched types
  --> src/system_objects/vector2d.rs:44:16
   |
35 | impl<T: Clone, RHS: Clone, _Output> Add<RHS> for Vector2D<T>
   |      -
   |      |
   |      expected this type parameter
   |      expected this type parameter
...
44 |             y: self.y.clone() + rhs.y.clone(),
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected type parameter `T`, found associ
ated type
   |
   = note: expected type parameter `T`
             found associated type `<T as Add<RHS>>::Output`
help: consider further restricting this bound
   |
37 |     T: Add<RHS, Output = T>,
   |               ++++++++++++
help: consider further restricting this bound
   |
37 |     T: Add<RHS, Output = T>,
   |               ++++++++++++

warning: unused variable: `v1`
  --> src/system_objects/vector2d.rs:50:9
   |
50 |     let v1 = Vector2D::new(1, 2);
   |         ^^ help: if this is intentional, prefix it with an underscore: `_v1`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `v2`
  --> src/system_objects/vector2d.rs:51:9
   |
51 |     let v2 = Vector2D::new(3, 4);
   |         ^^ help: if this is intentional, prefix it with an underscore: `_v2`

error[E0282]: type annotations needed
  --> src/system_objects/vector2d.rs:41:31
   |
41 |     fn add(self, rhs: RHS) -> Self::Output {
   |                               ^^^^^^^^^^^^ cannot infer type for type parameter `_Outpu
t`

Some errors have detailed explanations: E0207, E0282, E0308, E0425, E0574, E0609.
For more information about an error, try `rustc --explain E0207`.
warning: `linkphys` (lib) generated 3 warnings
error: could not compile `linkphys` (lib) due to 8 previous errors; 3 warnings emitted

Bug Labels:
A-incr-comp, C-bug, I-ICE, S-needs-repro, T-compiler
